# llm-datasets

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish_pypi.yml
add-your-own-data/: index.html
api/base_dataset/: index.html
api/config/: index.html
api/hf_dataset/: index.html
api/jsonl_dataset/: index.html
compose-train-validation-data/: index.html
config-files/: index.html
datasets/: index.html
datasets/language_af/: index.html
datasets/language_am/: index.html
datasets/language_an/: index.html
datasets/language_ar/: index.html
datasets/language_arz/: index.html
datasets/language_as/: index.html
datasets/language_ast/: index.html
datasets/language_av/: index.html
datasets/language_az/: index.html
datasets/language_azb/: index.html
datasets/language_ba/: index.html
datasets/language_be/: index.html
datasets/language_bg/: index.html
datasets/language_bh/: index.html
datasets/language_bn/: index.html
datasets/language_bo/: index.html
datasets/language_bpy/: index.html
datasets/language_br/: index.html
datasets/language_bs/: index.html
datasets/language_bxr/: index.html
datasets/language_ca/: index.html
datasets/language_ce/: index.html
datasets/language_ceb/: index.html
datasets/language_ckb/: index.html
datasets/language_code/: index.html
datasets/language_cs/: index.html
datasets/language_cv/: index.html
datasets/language_cy/: index.html
datasets/language_da/: index.html
datasets/language_de/: index.html
datasets/language_dsb/: index.html
datasets/language_dv/: index.html
datasets/language_el/: index.html
datasets/language_en/: index.html
datasets/language_eo/: index.html
datasets/language_es/: index.html
datasets/language_et/: index.html
datasets/language_eu/: index.html
datasets/language_fa/: index.html
datasets/language_fi/: index.html
datasets/language_fr/: index.html
datasets/language_fy/: index.html
datasets/language_ga/: index.html
datasets/language_gd/: index.html
datasets/language_gl/: index.html
datasets/language_gn/: index.html
datasets/language_gom/: index.html
datasets/language_gsw/: index.html
datasets/language_gu/: index.html
datasets/language_ha/: index.html
datasets/language_he/: index.html
datasets/language_hi/: index.html
datasets/language_hr/: index.html
datasets/language_hsb/: index.html
datasets/language_ht/: index.html
datasets/language_hu/: index.html
datasets/language_hy/: index.html
datasets/language_ia/: index.html
datasets/language_id/: index.html
datasets/language_ie/: index.html
datasets/language_ig/: index.html
datasets/language_ilo/: index.html
datasets/language_io/: index.html
docs/: README.md  add-your-own-data.md  compose-train-validation-data.md  config-files.md  extract-text-data.md  getting-started.md  index.md  integration-with-other-frameworks.md  overview.md  related-work.md
extract-text-data/: index.html
getting-started/: index.html
integration-with-other-frameworks/: index.html
overview/: index.html
related-work/: index.html
requirements/: base.txt  datasets.txt  datatrove.txt  dev.txt  docs.txt  megatron.txt  viewer.txt
search/: search_index.json
tests/: conftest.py  dummy_datasets.py  test_compose_dataset_benchmark.py  test_config.py  test_dataset_generator.py  test_datatrove_reader.py  test_document_datasets.py  test_generate_texts_from_output.py  test_interleave_datasets.py  test_iterate_over_shuffled_datasets.py  test_openlegaldata.py  test_opus100.py  test_read_parquet.py  test_sample.py  test_shuffle_parquet.py  test_split_dataset.py  test_tatoeba.py  test_textwrap.py  test_tlsh_hashes.py  test_write_parquet.py  test_write_parquet_chunks.py
(+532 files in other folders)
